<resources>
    <string name="app_name">OnePay Go</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_sale">Sale</string>
    <string name="nav_trans">Transactions</string>
    <string name="nav_setting">Settings</string>
    <string name="network_error">Please check your data connectivity …!!</string>
    <string name="enter_user_name">Please enter username</string>
    <string name="enter_password">Please enter password</string>
    <string name="missing_fields">Missing Fields</string>
    <string name="et_username">Username</string>
    <string name="et_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="forgot_pwd">Forgot your password?</string>
    <string name="dont_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="enter_amount">Please enter amount</string>
    <string name="connect">Connect a reader to swipe, insert or tap</string>
    <string name="transaction">Transaction </string>
    <string name="charge">Charge</string>
    <string name="reporting">Reporting</string>
    <string name="support">Support</string>
    <string name="help">Help</string>
    <string name="privacy_termsofuse">Privacy and Terms of Use</string>
    <string name="swipe">Swipe down for payment entry</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_cancel">Cancel</string>
    <string name="amount">amount</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="customer_id">Customer ID</string>
    <string name="invoice_no">Invoice Number</string>
    <string name="notes">Notes</string>
    <string name="tv_approved">Approved</string>
    <string name="tv_continue">Continue</string>
    <string name="sign_below">Please sign below</string>
    <string name="agree">I agree to pay the total amount according to card issuer agreement.</string>
    <string name="btn_clear">Clear Signature</string>
    <string name="btn_done">Done Signing</string>
    <string name="Services">Services</string>
    <string name="location_services">Location Services</string>
    <string name="bluetooth_services">Bluetooth Services</string>
    <string name="profile">Profile</string>
    <string name="tv_logout">LogOut</string>
    <string name="cardhint">4242 MM/YY CVC</string>
    <string name="cancel">Cancel</string>
    <string name="card_data">Card Data: </string>
    <string name="date">Date: </string>
    <string name="payment_failed">Payment Failed</string>
    <string name="payment_device">Payment device</string>
    <string name="t_dynamo">TDynamo</string>
    <string name="miura">Miura</string>
    <string name="terminal_name">Terminal Name</string>
    <string name="payment_timeout">TIMEOUT</string>
    <string name="receipt">How do you want to receive your receipt?</string>
    <string name="et_pno">Phone Number</string>
    <string name="et_email">Email Account (optional)</string>
    <string name="btn_submit">Submit</string>
    <string name="receipt_data">By providing your contact information, you agree that businesses that you visited may send you digital receipts. Marketing and messages via OnePay Go. See your digital receipt for privacy policy and preferences.</string>
    <string name="tv_done">Done</string>
    <string name="receipt_sent">Receipt will be sent shortly</string>
    <string name="status">Status</string>
    <string name="receipt_trans_details">Receipt</string>
    <string name="card_payment">CARD PAYMENT</string>
    <string name="item">ITEM</string>
    <string name="item_amount">$0.00</string>
    <string name="total">TOTAL</string>
    <string name="btn_void">Void</string>
    <string name="btn_new_receipt">New Receipt</string>
    <string name="tv_settings">Settings</string>
    <string name="tv_cancel">Cancel</string>
    <string name="tv_header_setting">Please setup a card reader in settings</string>
    <string name="btn_view_details">More Details</string>
    <string name="tv_transaction_id">Transaction Id</string>
    <string name="tv_terminal_id">Terminal Id:</string>
    <string name="tv_transaction_amount">Transaction Amount:</string>
    <string name="tv_approved_amount">Approved Amount:</string>
    <string name="amount_dol">$0.00</string>
    <string name="tv_settle_amount">Settlement Amount:</string>
    <string name="tv_transaction_method">Transaction Method:</string>
    <string name="tv_type">Transaction Type:</string>
    <string name="last4">Account Number Last4:</string>
    <string name="exp_date">Expiration Date:</string>
    <string name="card_type">Card Type:</string>
    <string name="nonce">Nonce:</string>
    <string name="ref_transaction_id">Reference Transaction ID:</string>
    <string name="related_transaction_id">Related Transaction ID:</string>
    <string name="transaction_notes">Transaction Notes:</string>
    <string name="customer_id_details">Customer ID:</string>
    <string name="email">Email:</string>
    <string name="firstname">First Name:</string>
    <string name="last_name_details">Last Name:</string>
    <string name="street1">Street1:</string>
    <string name="street2">Street2:</string>
    <string name="city">City:</string>
    <string name="state">State:</string>
    <string name="zip">Zip:</string>
    <string name="pno">Phone Number:</string>
    <string name="result_code">Result Code:</string>
    <string name="sub_code">Result Sub Code:</string>
    <string name="result_text">Result Text:</string>
    <string name="transaction_date_time">Transaction Date</string>
    <string name="merchant_date_time">Merchant Transaction DateTime:</string>
    <string name="batch_id">Batch ID:</string>
    <string name="SettledStatus">SettledStatus:</string>
    <string name="avs">AVS Result Code:</string>
    <string name="cvv">CVV Result Code:</string>
    <string name="auth_id">Authorization Id:</string>
    <string name="auth_ntwk">AuthNtwkName:</string>
    <string name="processor_id">Processor Transaction Id:</string>
    <string name="processor_aci">Processor ACI:</string>
    <string name="processor_card">Processor Card Level Result Code:</string>
    <string name="ip">Client Ip:</string>
    <string name="src_app">Source Application:</string>
    <string name="src_user">Source User:</string>
    <string name="src_ip">SourceIP:</string>
    <string name="tax_amount">TaxAmount:</string>
    <string name="tax_indicator">TaxIndicator:</string>
    <string name="vat_alt_amount">VatALtTaxAmount:</string>
    <string name="vat_alt_rate">VatALtTaxRate:</string>
    <string name="discount">DiscountAmount:</string>
    <string name="dest_postal">DestPostalCode:</string>
    <string name="ship_from">ShipFromPostalCode:</string>
    <string name="dest_country">DestCountryCode:</string>
    <string name="ProductDescription">ProductDescription:</string>
    <string name="ItemSeqNum">ItemSeqNum:</string>
    <string name="ItemCode">ItemCode:</string>
    <string name="ItemDescription">ItemDescription:</string>
    <string name="Lvl3ItemQuantity">Lvl3ItemQuantity:</string>
    <string name="Lvl3UnitofMeasure">Lvl3UnitofMeasure:</string>
    <string name="Lvl3UnitCost">Lvl3UnitCost:</string>
    <string name="Lvl3LineItemTotal">Lvl3LineItemTotal:</string>
    <string name="Lvl3DiscountAmount">Lvl3DiscountAmount:</string>
    <string name="Lvl3VatAltTaxAmount">Lvl3VatAltTaxAmount:</string>
    <string name="Lvl3VatAltTaxRate">Lvl3VatAltTaxRate:</string>
    <string name="Lvl3ProductCode">Lvl3ProductCode:</string>
    <string name="Lvl3ExtendedItemAmount">Lvl3ExtendedItemAmount:</string>
    <string name="Lvl3TaxIndicator">Lvl3TaxIndicator:</string>
    <string name="Lvl3TaxRate">Lvl3TaxRate:</string>
    <string name="Lvl3TaxAmount">Lvl3TaxAmount:</string>
    <string name="Lvl3ProductDescriptor">Lvl3ProductDescriptor:</string>
    <string name="Lvl3TaxTypeIdentifier">Lvl3TaxTypeIdentifier:</string>
    <string name="invoice_no_more">Invoice Number:</string>
    <string name="amount_dialog">Amount:</string>
    <string name="tv_authcode">Auth Code:</string>
    <string name="zones">Zones</string>
    <string name="zone_prod">Zone 1</string>
    <string name="zone_sandbox">Zone 2</string>
    <string name="zone_test">Zone 3</string>
    <string name="zone_dev">Zone 4</string>
    <string name="empty_result">No Results Found</string>
    <string name="btn_connect">Connect</string>
    <string name="tv_header_logout">Are you sure to logout?</string>
    <string name="tv_header_logout_message">API Zone will get changed</string>
    <string name="tv_confirm">Confirm</string>
    <string name="version">VERSION</string>
    <string name="onepay_go_version">App Version -</string>
    <string name="no_active_terminal">Account setup required. Please contact administrator</string>
    <string name="active">To make a device visible in here, first you need to connect it via Settings > Bluetooth.</string>
    <string name="available">AVAILABLE DEVICES</string>
    <string name="paired">No paired devices.\nIf possible select one from the list below.</string>
    <string name="selected">SELECTED DEVICES</string>
    <string name="title_activity_tdynamo_devices">TDynamoDevicesActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="please_wait">Please wait</string>
    <string name="hint_card_number">Card number</string>
    <string name="hint_expired_date">MM</string>
    <string name="hint_expired_year">MM/YY</string>
    <string name="hint_card_holder">CARD HOLDER</string>
    <string name="hint_cvv_code">CVV</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Charge">Charge</string>
    <string name="symbol">$</string>
    <string name="Proceed">Proceed</string>
    <string name="card_manual_entry">Enter Card manually</string>
    <string name="card_insert_tap_swipe">Insert, Tap or Swipe Card</string>
    <string name="ebt_card_manual_entry">Enter EBT Card manually</string>
    <string name="ebt_card_swipe">Swipe EBT Card</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="amount_paid">Amount paid</string>
    <string name="paid_by">Paid by</string>
    <string name="no_thanks">No Thanks</string>
    <string name="send_receipt">Send Receipt</string>
    <string name="retry">Retry</string>
    <string name="pay">Pay</string>
    <string name="transaction_history">Transaction History</string>
    <string name="payment_details">Payment details</string>
    <string name="customer_email">Customer email</string>
    <string name="customer_no">Customer No.</string>
    <string name="card_number">Card Number</string>
    <string name="refund">Refund</string>
    <string name="settlement_status">Settlement Status</string>
    <string name="swipe_up_to">Swipe up to enter customer information</string>
    <string name="payment_information">Payment Information</string>
    <string name="settlement_information">Settlement Information</string>
    <string name="authorization_information">Authorization Information</string>
    <string name="transaction_source">Transaction Source</string>
    <string name="card_information">Card Information</string>
    <string name="transaction_result">Transaction Result</string>
</resources>