<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_chage_menu"
        android:icon="@drawable/ic_charge_icon"
        android:title="@string/nav_sale" />
    <item
        android:id="@+id/nav_transaction_menu"
        android:icon="@drawable/ic_get_money"
        android:title="@string/reporting" />
    <item
        android:id="@+id/nav_support"
        android:icon="@drawable/ic_support_call"
        android:title="@string/support" />
    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/ic_info"
        android:title="@string/help" />


    <item
        android:id="@+id/nav_Privacy_pol"
        android:icon="@drawable/ic_privacy_terms"
        android:title="@string/privacy_termsofuse"
        />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_setting"
        android:title="@string/tv_settings" />
</menu>