<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light"
    android:padding="@dimen/size_25">


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_receipt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border"
        android:hint="@string/et_email"
        android:padding="@dimen/size_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_receipt_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_25"
        android:gravity="center"
        android:text="@string/receipt_data"
        android:textColor="@color/gray_text"
        app:layout_constraintTop_toBottomOf="@+id/et_receipt_email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_receipt_submit"
        style="@style/ButtonBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_35"
        android:paddingStart="@dimen/size_35"
        android:paddingEnd="@dimen/size_35"
        android:text="@string/btn_submit"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_receipt_message" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_receipt_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_35"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/cancel"
        android:textColor="@color/gray_text"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintTop_toBottomOf="@+id/bt_receipt_submit" />
</androidx.constraintlayout.widget.ConstraintLayout>
