<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/rectangle"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="@dimen/size_10">

    <TextView
        android:id="@+id/tv_header_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/tv_header_logout"
        android:textColor="@color/black_light2"
        android:fontFamily="@font/poppins_regular"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginTop="@dimen/size_10"
        android:background="@color/gray_dark"
        android:paddingTop="@dimen/size_10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/tv_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/size_10"
            android:text="@string/tv_confirm"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_18" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray_dark" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/size_10"
            android:text="@string/tv_cancel"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/read"
            android:textSize="@dimen/text_size_18" />

    </LinearLayout>
</LinearLayout>