<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_20"
        android:layout_marginBottom="@dimen/size_20"
        android:background="@drawable/white_corners"
        android:padding="@dimen/size_30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_20"
            android:layout_marginEnd="@dimen/size_20"
            android:layout_marginBottom="@dimen/size_20"
            android:src="@drawable/logo_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_40"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@android:color/holo_red_light"
            android:textSize="@dimen/text_size_18"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_60"
            android:layout_marginTop="@dimen/size_10"
            android:background="@drawable/edit_text_border"
            android:hint="@string/et_username"
            android:inputType="text"
            android:paddingStart="@dimen/size_10"
            android:paddingEnd="@dimen/size_10"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/text_size_18"
            android:textColorHint="@color/gray_dark"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/et_pass_word"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_error" />


        <EditText
            android:id="@+id/et_pass_word"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_60"
            android:layout_marginTop="@dimen/size_25"
            android:background="@drawable/edit_text_border"
            android:hint="@string/et_password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/size_10"
            android:paddingEnd="@dimen/size_10"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/text_size_18"
            android:textColorHint="@color/gray_dark"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_user_name" />

        <TextView
            android:id="@+id/forgot_pass_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10"
            android:text="@string/forgot_pwd"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_18"
            app:layout_constraintRight_toRightOf="parent"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintTop_toBottomOf="@id/et_pass_word" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tv_login"
            style="@style/ButtonBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_40"
            android:padding="@dimen/size_20"
            android:text="@string/btn_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgot_pass_word" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_login">

            <TextView
                android:id="@+id/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_25"
                android:gravity="center"
                android:text="@string/dont_account"
                android:textColor="@color/gray_dark"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/text_size_18" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_05"
                android:layout_marginTop="@dimen/size_25"
                android:gravity="center"
                android:text="@string/register"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/blue"
                android:textSize="@dimen/text_size_18" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>